--- a/Learning-NodeJS/Express/views/error.html
+++ b/Learning-NodeJS/Express/views/error.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
+    <title>Document</title>
 </head>
 <body>
-
     <header>
         <nav>
             <ul>
@@ -18,11 +17,7 @@
     </header>
 
     <main>
-        <form action="/add-product" method="POST">
-            <input type="text name="title">
-            <button type="submit">Add Product</button>
-        </form>
+        <h1>Error 404</h1>
     </main>
-
 </body>
 </html>
