--- a/Learning-NodeJS/Express/views/add-product.pug
+++ b/Learning-NodeJS/Express/views/add-product.pug
@@ -13,13 +13,13 @@ html(lang="en")
             nav.main-header__nav   
                 ul.main-header__item-list
                     li.main-header__item
-                        a.active(href="/") Shop  
+                        a(href="/") Shop  
                     li.main-header__item
-                        a(href="/admin/add-product") Add Product
+                        a.active(href="/admin/add-product") Add Product
         main
-            form.product-form(action="/admin/add-product" method="POST")
+            form.product-form(action="/admin/add-product", method="POST")
                 .form-control
                     label(for="title") Title
-                    input(type="text" name="title" id="title")
+                    input(type="text", name="title")#title
 
                 button.btn(type="submit") Add Product
