Using stripe in our App

--- a/Learning-NodeJS/Adding-Authentication/views/shop/checkout.ejs
+++ b/Learning-NodeJS/Adding-Authentication/views/shop/checkout.ejs
@@ -16,5 +16,18 @@
             <div class="centered">
                 <h2>Total: <%= totalSum %></h2>
             </div>
+            <div class="centered">
+                <button id="order-btn" class="btn">ORDER</button>
+                <script src="https://js.stripe.com/v3/"></script>
+                <script>
+                    const stripe = Stripe('pk_test_51L09xyCRFCnhbPfVkFhdkFL1bUS9Qln5OAPG0TxDAc9R3RAdEAS16rbmfeUYVbP6FIehwgVmJHaYCRDiFLJUP94I00yjS7vvBX')
+                    const orderBtn = document.getElementById('order-btn')
+                    orderBtn.addEventListener('click', () => {
+                        stripe.redirectToCheckout({
+                            sessionId: '<%= sessionId %>'
+                        })
+                    })
+                </script>
+            </div>
         </main>
         <%- include('../includes/end.ejs') %>
